# social_nav2

./: .dockerignore  .gitignore  Dockerfile  README.md  packages.repos  requirements.txt
.devcontainer/: devcontainer.json
core_cleaning_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
core_cleaning_robot/config/: RlPurePursuitController.xml  SFWPlannerNode.xml  main_params.yaml  mapper_params_online_async.yaml  mux.yaml  nav2_params_cleaning_robot.yaml  view_bot.rviz
core_cleaning_robot/core_cleaning_robot/: publish_robot_as_people_node.py
core_cleaning_robot/launch/: demo_cleaning_robot.launch.py  navigation_launch.py  robot.launch.py  slam_launch.py
core_cleaning_robot/models/cleaning_robot/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
core_custom_messages/: CMakeLists.txt  package.xml
core_custom_messages/msg/: PathWithLength.msg
core_dynamical_agent/: CMakeLists.txt  package.xml  setup.cfg  setup.py
core_dynamical_agent/config/: mux.yaml  nav2_params_agents.yaml  navigate_through_poses_agent1.xml  navigate_through_poses_agent2.xml
core_dynamical_agent/launch/: agent.launch.py  dynamical_agent.launch.py  navigation_dynamic_agent_launch.py
core_dynamical_agent/models/agent/: lidar.xacro  robot.urdf.xacro  robot_core.xacro
core_gazebo_world/: CMakeLists.txt  package.xml
core_gazebo_world/launch/: environment.launch.py  gazebo_empty.launch.py
core_gazebo_world/maps/custom_office/: office_map.pgm  office_map.yaml
core_gazebo_world/maps/office/: office_map.data  office_map.pgm  office_map.yaml
core_gazebo_world/maps/office_bigger/: office_map.data  office_map.pgm  office_map.yaml
core_gazebo_world/models/custom_office/: model.config  office_geometry.urdf.xacro
core_gazebo_world/models/custom_office/meshes/: office.dae
core_gazebo_world/models/office/: model.config  model.sdf
core_gazebo_world/models/office_bigger/: model.sdf
core_gazebo_world/worlds/empty/: world.config  world.sdf.xacro
core_nav2_navigation/: CMakeLists.txt  local_planner_plugin.xml  package.xml
core_nav2_navigation/core_nav2_navigation/: multi_task_navigator.py
core_nav2_navigation/include/core_nav2_navigation/: resample_path.hpp  rl_local_planner.hpp
core_nav2_navigation/scripts/: follow_single_waypoint.py  follow_waypoints.py
core_nav2_navigation/src/: resample_path.cpp  rl_local_planner.cpp
core_reinforcement_learning/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
core_reinforcement_learning/config/: main_params.yaml
core_reinforcement_learning/core_reinforcement_learning/: construct_safe_corridor_node.py  eval_utils.py  footprint_collision_checker.py  human_metrics.py  imitation_learning_utils.py  publish_agents_velocity.py  rl_alg_utils.py  rl_node_manager.py  ros_gazebo_env.py  train_rl.py  utils.py  world_interact_node.py
core_reinforcement_learning/launch/: reinforcement_learning.launch.py
core_reinforcement_learning/test/: test_ros_gazebo_env.py  test_utils.py
core_ros_gz_service_bridge/: CMakeLists.txt  README.md  package.xml
core_ros_gz_service_bridge/core_ros_gz_service_bridge/: __init__.py  mappings.py
core_ros_gz_service_bridge/include/core_ros_gz_service_bridge/: bridge_config.hpp  convert_decl.hpp  core_ros_gz_service_bridge.hpp
core_ros_gz_service_bridge/include/core_ros_gz_service_bridge/convert/: builtin_interfaces.hpp  geometry_msgs.hpp  rcl_interfaces.hpp  ros_gz_interfaces.hpp  std_msgs.hpp
core_ros_gz_service_bridge/launch/: spawn_entity_pose.launch.py
core_ros_gz_service_bridge/models/: box.sdf
core_ros_gz_service_bridge/resource/: get_factory.cpp.em  get_mappings.cpp.em  pkg_factories.cpp.em  pkg_factories.hpp.em
core_ros_gz_service_bridge/src/: bridge_config.cpp  bridge_handle.cpp  bridge_handle.hpp  core_ros_gz_service_bridge.cpp  factory.hpp  factory_interface.cpp  factory_interface.hpp  get_factory.hpp  get_mappings.hpp  service_bridge.cpp  service_factory.hpp  service_factory_interface.hpp
core_ros_gz_service_bridge/src/convert/: builtin_interfaces.cpp  geometry_msgs.cpp  rcl_interfaces.cpp  ros_gz_interfaces.cpp  std_msgs.cpp  utils.cpp  utils.hpp
core_ros_gz_service_bridge/src/service_factories/: core_ros_gz_interfaces.cpp  core_ros_gz_interfaces.hpp
core_twist_tools/: CMakeLists.txt  README.md  package.xml
core_twist_tools/config/: joy.yaml  mux.yaml  teleop_joy.yaml  teleop_key.yaml
core_twist_tools/core_twist_tools/: my_module.py
core_twist_tools/launch/: twist_mux.launch.py  twist_mux_key.launch.py  twist_mux_key_joy.launch.py  twist_teleop_joy.launch.py  twist_teleop_key.launch.py
core_twist_tools/scripts/: twist_integrator.py  twist_mux.py  twist_teleop_joy.py  twist_teleop_key.py
core_twist_tools/src/: hello_world_cpp_node.cpp
rl_pure_pursuit_controller/: CMakeLists.txt  README.md  package.xml  rl_pure_pursuit_controller.xml
rl_pure_pursuit_controller/include/rl_pure_pursuit_controller/: rl_pure_pursuit_controller.hpp
rl_pure_pursuit_controller/src/: rl_pure_pursuit_controller.cpp
