<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_cleaning_robot</name>
  <version>0.0.0</version>
  <description>CORE Research Package for a Reinforcement Learning Socially Aware Robot Framework</description>
  <maintainer email="m.j.c.b.v.ijsseldijk@student.tue.nl">Max van IJsseldijk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros_gz_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rmw_cyclonedds_cpp</depend>

  <exec_depend>xterm</exec_depend> #System Dependency
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
