<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_nav2_navigation</name>
  <version>0.0.0</version>
  <description>CORE Research Package implementing nav2 utilities</description>
  <maintainer email="m.j.c.b.v.ijsseldijk@student.tue.nl">Max van IJsseldijk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros_gz_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>  
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>rmw_cyclonedds_cpp</depend>
  <depend>core_custom_messages</depend>
  <depend>nav2_common</depend>
  <depend>ompl</depend>
  <depend>nav_2d_msgs</depend>
  <depend>dwb_msgs</depend>
  <depend>dwb_core</depend>
  <depend>social_force_window_planner</depend>
  <depend>rl_pure_pursuit_controller</depend>
  <exec_depend>xterm</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/local_planner_plugin.xml" />
  </export>
</package>
