<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_reinforcement_learning</name>
  <version>0.0.0</version>
  <description>This package holds RL scripts and executables to run in a ROS2 architecture</description>
  <maintainer email="maxvanijsseldijk@gmail.com">max</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>rmw_cyclonedds_cpp</depend>
  <depend>tf2_ros</depend>
  <depend>core_custom_messages</depend>
  <depend>people_msgs</depend>
  <depend>python3-stable-baselines3-pip</depend>
  <depend>python3-gymnasium-pip</depend>
  <depend>python3-torch</depend>
  <depend>python3-numpy</depend>
  <depend>python3-transforms3d</depend>

  <exec_depend>xterm</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
